--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,11 @@ yarn-debug.log*
 yarn-error.log*
 
 # Editor directories and files
+.babelrc
+.editorconfig
+.gitignore
+.npmignore
+.postcssrc.js
 .idea
 *.suo
 *.ntvs*
